tests/errors/e_cdef_missing_declarator.pyx
# mode: error

cdef int

extern from *:
    fn void f(i32)

_ERRORS = u"""
3:8: Empty declarator
"""
